@@ -131,6 +131,15 @@ class ArchitectureTest extends AbstractArchitectureTest {
     }
 
     @Test
+    void testNoShadedDependencies() {
+        ArchRule noShadedDependencies = noClasses().should().dependOnClassesThat().resideInAnyPackage("..shaded..", "..repackaged..")
+                .because("Depending on a third-party library's shaded/relocated internal copy (e.g. org.apache.velocity.shaded.commons.io.FilenameUtils) is fragile: "
+                        + "the host library can drop or relocate the shaded package on any version bump, silently breaking the build (this happened during the OpenSAML/Velocity "
+                        + "upgrade in the Spring Boot 4.1 bump). Depend on the real, explicitly-declared library instead (e.g. commons-io for FilenameUtils).");
+        noShadedDependencies.check(allClasses);
+    }
+
+    @Test
     void testClassNameAndVisibility() {
         ArchRule classNames = methods().that().areAnnotatedWith(Test.class).should().beDeclaredInClassesThat().haveNameMatching(".*Test").orShould().beDeclaredInClassesThat()
                 .areAnnotatedWith(Nested.class);
@@ -422,8 +431,7 @@ class ArchitectureTest extends AbstractArchitectureTest {
                 boolean hasConditionalOnExpression = item.isAnnotatedWith(ConditionalOnExpression.class);
                 boolean hasConditionalOnProperty = item.isAnnotatedWith(ConditionalOnProperty.class);
                 if (!(hasProfileAnnotation || hasConditionalAnnotation || hasConditionalOnExpression || hasConditionalOnProperty)) {
-                    String message = String.format("Class %s is neither annotated with @Profile, @Conditional, @ConditionalOnExpression or @ConditionalOnProperty",
-                            item.getFullName());
+                    String message = "Class %s is neither annotated with @Profile, @Conditional, @ConditionalOnExpression or @ConditionalOnProperty".formatted(item.getFullName());
                     events.add(SimpleConditionEvent.violated(item, message));
                 }
             }
@@ -604,10 +612,9 @@ class ArchitectureTest extends AbstractArchitectureTest {
                 for (var parameter : constructor.getParameters()) {
                     if (parameter.isAnnotatedWith(Lazy.class)) {
                         events.add(violated(constructor,
-                                String.format(
-                                        "Constructor %s has parameter '%s' annotated with @Lazy. "
-                                                + "Remove @Lazy from the parameter and ensure the injected bean class is annotated with @Lazy instead.",
-                                        constructor.getFullName(), parameter.getRawType().getSimpleName())));
+                                ("Constructor %s has parameter '%s' annotated with @Lazy. "
+                                        + "Remove @Lazy from the parameter and ensure the injected bean class is annotated with @Lazy instead.")
+                                        .formatted(constructor.getFullName(), parameter.getRawType().getSimpleName())));
                     }
                 }
             }
@@ -622,10 +629,9 @@ class ArchitectureTest extends AbstractArchitectureTest {
                 for (var parameter : method.getParameters()) {
                     if (parameter.isAnnotatedWith(Lazy.class)) {
                         events.add(violated(method,
-                                String.format(
-                                        "Method %s has parameter '%s' annotated with @Lazy. "
-                                                + "Remove @Lazy from the parameter and ensure the injected bean class is annotated with @Lazy instead.",
-                                        method.getFullName(), parameter.getRawType().getSimpleName())));
+                                ("Method %s has parameter '%s' annotated with @Lazy. "
+                                        + "Remove @Lazy from the parameter and ensure the injected bean class is annotated with @Lazy instead.")
+                                        .formatted(method.getFullName(), parameter.getRawType().getSimpleName())));
                     }
                 }
             }
@@ -673,8 +679,8 @@ class ArchitectureTest extends AbstractArchitectureTest {
                     String typeName = parameter.getRawType().getName();
                     if (typeName.equals("org.springframework.beans.factory.ObjectProvider")) {
                         events.add(violated(constructor,
-                                String.format("Constructor %s has parameter of type ObjectProvider. " + "ObjectProvider should not be used to work around circular dependencies. "
-                                        + "Refactor the code to break the dependency cycle instead.", constructor.getFullName())));
+                                ("Constructor %s has parameter of type ObjectProvider. " + "ObjectProvider should not be used to work around circular dependencies. "
+                                        + "Refactor the code to break the dependency cycle instead.").formatted(constructor.getFullName())));
                     }
                 }
             }
@@ -781,7 +787,7 @@ class ArchitectureTest extends AbstractArchitectureTest {
                 for (var parameter : parameters) {
                     if (classWithSchedulingProfile().test(parameter.getRawType())) {
                         events.add(violated(parameter,
-                                String.format("Class %s uses class %s without wrapping it with Optionals.", parameter.getOwner().getFullName(), parameter.getType().getName())));
+                                "Class %s uses class %s without wrapping it with Optionals.".formatted(parameter.getOwner().getFullName(), parameter.getType().getName())));
                     }
                 }
             }
@@ -806,7 +812,7 @@ class ArchitectureTest extends AbstractArchitectureTest {
                     JavaClass caller = call.getOriginOwner();
                     if (!caller.isAssignableTo(allowedCaller)) {
                         events.add(violated(call,
-                                String.format("%s calls %s, but only %s should call this method", caller.getName(), method.getFullName(), allowedCaller.getSimpleName())));
+                                "%s calls %s, but only %s should call this method".formatted(caller.getName(), method.getFullName(), allowedCaller.getSimpleName())));
                     }
                 }
             }
